--- a/ios/poc.xcodeproj/xcshareddata/xcschemes/pocApp.xcscheme
+++ b/ios/poc.xcodeproj/xcshareddata/xcschemes/pocApp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "HairSegmentApp.app"
-               BlueprintName = "HairSegmentApp"
-               ReferencedContainer = "container:HairSegmentApp.xcodeproj">
+               BuildableName = "poc.app"
+               BlueprintName = "poc"
+               ReferencedContainer = "container:poc.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "HairSegmentAppTests.xctest"
-               BlueprintName = "HairSegmentAppTests"
-               ReferencedContainer = "container:HairSegmentApp.xcodeproj">
+               BuildableName = "pocTests.xctest"
+               BlueprintName = "pocTests"
+               ReferencedContainer = "container:poc.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HairSegmentApp.app"
-            BlueprintName = "HairSegmentApp"
-            ReferencedContainer = "container:HairSegmentApp.xcodeproj">
+            BuildableName = "poc.app"
+            BlueprintName = "poc"
+            ReferencedContainer = "container:poc.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HairSegmentApp.app"
-            BlueprintName = "HairSegmentApp"
-            ReferencedContainer = "container:HairSegmentApp.xcodeproj">
+            BuildableName = "poc.app"
+            BlueprintName = "poc"
+            ReferencedContainer = "container:poc.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
